--- a/shortenurls/templates/shortenurls/base.html
+++ b/shortenurls/templates/shortenurls/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="{% static 'js/shortener.js' %}"></script>
     <title>URL Shortener</title>
 </head>
 <body>
